--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
 	"type": "library",
 	"license": "MIT",
 	"require": {
-		"php": "^7.4",
-		"flynn314/webclient": "^0.0.1",
+		"php": "^7.4|^8.2",
+		"flynn314/webclient": "^1.0",
 		"symfony/dom-crawler": "^3.3|^5.4",
 		"symfony/css-selector": "^3.3|^5.4"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~6.0|^9.6"
+		"phpunit/phpunit": "*"
 	},
 	"autoload": {
 		"psr-4": {
