--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"symfony/css-selector": "^7.2"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "11.5.2"
+		"phpunit/phpunit": "11.5.2",
+		"larapack/dd": "^1.1"
 	},
 	"autoload": {
 		"psr-4": {
